<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="AboutWord">About</string>
    <string name="AccountCreationFloodcheck">You have made too many accounts. Please wait before making more.</string>
    <string name="Add">Add</string>
    <string name="AddFriends">Add Friends</string>
    <string name="AndWord">And</string>
    <string name="AnyUserNeedsToSignIn">Please login to complete the pending transaction. If this problem persists contact info@skyblox.co</string>
    <string name="AppPurchasingDisabledTitle">In-App Purchasing disabled</string>
    <string name="Banned14Day">Banned for 14 Days</string>
    <string name="Banned1Day">Banned for 1 Day</string>
    <string name="Banned3Day">Banned for 3 Days</string>
    <string name="Banned7Day">Banned for 7 Days</string>
    <string name="BannedAppeals">If you wish to appeal, please send an email to &lt;a href=\"mailto:appeals@skyblox.co?Subject=Ban%20Appeal\">appeals@skyblox.co&lt;/a>.</string>
    <string name="BannedDefault">Account Unavailable</string>
    <string name="BannedDelete">Account Deleted</string>
    <string name="BannedDeletedFirstLine">Our content monitors have determined that your behavior at SKYBLOX has been in violation of our Terms of Service.</string>
    <string name="BannedDeletedMessage">Your account has been terminated.</string>
    <string name="BannedFirstLine">Our content monitors have determined that your behavior at SKYBLOX has been in violation of our Terms of Service. We will terminate your account if you do not abide by the rules.</string>
    <string name="BannedGuidelines">Please abide by the &lt;a href=\"https://en.help.skyblox.co/hc/en-us/articles/203313410-SKYBLOX-Rules-of-Conduct\">SKYBLOX Community Guidelines&lt;/a> so that SKYBLOX can be fun for users of all ages.</string>
    <string name="BannedLengthAndEndDate">Your account has been banned for %1$d days. You may reactive it after %2$s.</string>
    <string name="BannedMessagePermanent">You have been banned from SKYBLOX permanently. Please login via a browser for more information.</string>
    <string name="BannedMessageTemporary">You have been temporarily banned from SKYBLOX. Please login via a browser for more information.</string>
    <string name="BannedModeratorNote">Moderator Note: %s</string>
    <string name="BannedReviewed">Reviewed: %s</string>
    <string name="BannedTitle">Account Unavailable</string>
    <string name="BannedWarning">Warning</string>
    <string name="BannedWarningInstructions">You must login at &lt;a href=\"http://www.skyblox.co\">www.skyblox.co&lt;/a> to re-activate your account.</string>
    <string name="BirthdayInvalid">Your birthday appears to be incorrect.</string>
    <string name="BirthdayRequirements">Select Your Birthday</string>
    <string name="BirthdayWord">Birthday</string>
    <string name="BuildWord">Build</string>
    <string name="BuildersClubWord">Builders Club</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelWord">Cancel</string>
    <string name="CannotMakePurchase">We are sorry, you cannot make purchases at this time. If this problem persists contact info@skyblox.co</string>
    <string name="CannotPurchaseBecauseParentalControl">You are not able to make purchases. Check your parental control settings and try again later.</string>
    <string name="CatalogWord">Catalog</string>
    <string name="ChangeEmailAddTitle">ADD EMAIL</string>
    <string name="ChangeEmailAddTitleUnder13">"ADD PARENT'S EMAIL"</string>
    <string name="ChangeEmailCurrentPassword">Current Password</string>
    <string name="ChangeEmailNewEmail">New Email</string>
    <string name="ChangeEmailNewEmailUnder13">"New Parent's Email"</string>
    <string name="ChangeEmailNoNewEmail">You must enter a new email address!</string>
    <string name="ChangeEmailNoPassword">You must enter your current password!</string>
    <string name="ChangeEmailSameAsCurrent">This is your current email!</string>
    <string name="ChangeEmailShort">Change Email</string>
    <string name="ChangePasswordConfirmPassword">Confirm New Password</string>
    <string name="ChangePasswordNewPassword">New Password</string>
    <string name="ChangePasswordOldPassword">Old Password</string>
    <string name="ChangePasswordTitle">CHANGE PASSWORD</string>
    <string name="ChangePasswordValue">If your linked account stops working you can log in using this password. It provides an extra layer of account security.</string>
    <string name="CloseWord">Close</string>
    <string name="FriendsWord">Friends</string>
    <string name="LoginButton">Login</string>
    <string name="LoginWord">LOGIN</string>
    <string name="PasswordWord">Password</string>
    <string name="PlayNowButtonLabel">Play Now</string>
    <string name="RememberPassword">Remember Password</string>
    <string name="ResetPasswordInstructions">Enter your username to reset password.</string>
    <string name="ResetPasswordTitle">RESET PASSWORD</string>
    <string name="ResetWord">Reset</string>
    <string name="SettingsSaveWord">Save</string>
    <string name="SignupLower">Sign Up</string>
    <string name="SignupWordSpace">SIGN UP</string>
    <string name="UsernameWord">Username</string>
    <string name="ValuePageFriends">Find your friends, send them messages (just kidding), and view their profiles. Sign up to make new friends!</string>
    <string name="empty" />
</resources>