<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.skyblox.c2016.components.RbxTextView android:textSize="@dimen/textSizeSignupHeader" android:textColor="@color/RbxGray2" android:gravity="bottom" android:layout_gravity="bottom" android:id="@id/fragment_change_password_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ChangePasswordTitle" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/fragment_change_password_value" android:paddingBottom="1.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="bottom" android:id="@id/fragment_change_password_value_icon" android:visibility="gone" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/icon_warning" android:layout_centerVertical="true" />
        <com.skyblox.c2016.components.RbxTextView android:textSize="@dimen/emailAlert" android:textColor="@color/black" android:id="@id/fragment_change_password_value_text" android:paddingLeft="7.0dip" android:paddingTop="2.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="@string/ChangePasswordValue" />
    </RelativeLayout>
    <com.skyblox.c2016.components.RbxEditText android:id="@id/fragment_change_password_old_password" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:hintText="@string/ChangePasswordOldPassword" app:inputType="password" style="@style/Theme.Roblox.EditText" />
    <com.skyblox.c2016.components.RbxEditText android:id="@id/fragment_change_password_new_password" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:hintText="@string/ChangePasswordNewPassword" app:hintTextLong="Password (4 letters and 2 numbers min.)" app:inputType="password" style="@style/Theme.Roblox.EditText" />
    <com.skyblox.c2016.components.RbxEditText android:id="@id/fragment_change_password_confirm_password" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:hintText="@string/ChangePasswordConfirmPassword" app:inputType="password" style="@style/Theme.Roblox.EditText" />
    <LinearLayout android:gravity="bottom" android:layout_gravity="top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.5">
        <Space android:layout_gravity="top" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="3.0" />
        <com.skyblox.c2016.components.RbxButton android:textSize="@dimen/textSizeBtnCancel" android:layout_gravity="top" android:id="@id/fragment_change_password_cancel_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/CancelWord" android:layout_weight="10.0" style="@style/Theme.Roblox.Button.Flat.White" />
        <Space android:layout_gravity="top" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="1.0" />
        <com.skyblox.c2016.components.RbxProgressButton android:layout_gravity="top" android:id="@id/fragment_change_password_save_btn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="10.0" app:defButtonText="@string/SettingsSaveWord" app:progressTextSize="@dimen/textSizeBtnSubmitProgress" app:buttonTextSize="@dimen/textSizeBtnSubmit" style="@style/Theme.Roblox.Progress.Button.Blue" />
        <Space android:layout_gravity="top" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="3.0" />
    </LinearLayout>
</LinearLayout>
