<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/fragment_login" android:background="@color/shell_dialog_background" android:layout_width="680.0dip" android:layout_height="wrap_content" android:minWidth="500.0dip" android:minHeight="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@color/shell_dialog_bar" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_link" android:id="@id/fragment_login_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/CancelWord" android:layout_weight="1.0" />
        <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LoginWord" android:layout_weight="0.0" />
        <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/empty" android:layout_weight="1.0" />
    </LinearLayout>
    <TableLayout android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="1">
        <TableRow>
            <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/UsernameWord" />
            <EditText android:textColorHint="@color/shell_text_hint" android:id="@id/fragment_login_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/empty" android:inputType="textNoSuggestions" android:imeOptions="actionNext" style="@style/LoginEditTextTheme" />
        </TableRow>
        <TableRow>
            <TextView android:textSize="20.0sp" android:textColor="@color/shell_text_normal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/PasswordWord" />
            <EditText android:textColorHint="@color/shell_text_hint" android:id="@id/fragment_login_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/empty" android:inputType="textPassword" android:imeOptions="actionGo" style="@style/LoginEditTextTheme" />
        </TableRow>
        <TableRow android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Space android:layout_width="30.0dip" android:layout_height="30.0dip" />
            <CheckBox android:textColor="@color/shell_text_normal" android:id="@id/fragment_remember_password_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/RememberPassword" android:contentDescription="@string/empty" style="@style/LoginCheckboxTheme" />
            <Space android:layout_width="20.0dip" android:layout_height="20.0dip" />
        </TableRow>
    </TableLayout>
    <Button android:textSize="25.0sp" android:id="@id/fragment_login_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="150.0dip" android:layout_marginRight="150.0dip" android:text="@string/LoginWord" style="@style/LoginButtonTheme" />
</LinearLayout>
