<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.4"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <com.skyblox.c2016.components.RbxTextView android:textSize="@dimen/textSizeSignupHeader" android:textColor="@color/RbxGray2" android:gravity="bottom" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ResetPasswordTitle" android:layout_weight="2.0" />
    </LinearLayout>
    <com.skyblox.c2016.components.RbxTextView android:textSize="@dimen/textSizeLabel" android:textColor="@color/RbxGray2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ResetPasswordInstructions" />
    <com.skyblox.c2016.components.RbxEditText android:id="@id/fragment_reset_password_username_edit" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="3.0dip" android:layout_weight="0.5" android:contentDescription="@string/UsernameWord" app:hintText="Username" app:errorText="Username contains invalid characters" style="@style/Theme.Roblox.EditText" />
    <LinearLayout android:orientation="vertical" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5">
            <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" />
            <com.skyblox.c2016.components.RbxButton android:textSize="@dimen/textSizeBtnCancel" android:layout_gravity="center" android:id="@id/fragment_reset_password_cancel_button" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/CancelWord" android:layout_weight="10.0" android:contentDescription="@string/CancelWord" style="@style/Theme.Roblox.Button.Flat.White" />
            <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <com.skyblox.c2016.components.RbxProgressButton android:layout_gravity="center" android:id="@id/fragment_reset_password_reset_button" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="10.0" android:contentDescription="@string/ResetWord" app:defButtonText="@string/ResetWord" app:buttonTextSize="@dimen/textSizeBtnSubmit" style="@style/Theme.Roblox.Progress.Button.Blue" />
            <Space android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
