<?xml version="1.0" encoding="utf-8"?>
<com.skyblox.c2016.components.RbxLinearLayout android:orientation="vertical" android:id="@id/fragment_value_home_card" android:background="@drawable/rbx_bg_card_shadow_blue_light" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.skyblox.c2016.components.RbxTextView android:textSize="@dimen/textSizeSignupHeader" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/FriendsWord" style="@style/Theme.Roblox.StandardFontRegular" />
    <com.skyblox.c2016.components.RbxTextView android:textSize="@dimen/textSizeSignupLogin" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ValuePageFriends" />
    <com.skyblox.c2016.components.RbxButton android:textColor="@color/white" android:layout_gravity="right" android:id="@id/fragment_value_btn_signup" android:background="@color/RbxBlue3" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/SignupWordSpace" />
</com.skyblox.c2016.components.RbxLinearLayout>
