<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/activity_start_facebook_container" android:layout_width="250.0dip" android:layout_height="@dimen/landingButtonHeight" android:layout_marginBottom="20.0dip">
        <com.skyblox.c2016.components.RbxButton android:textSize="@dimen/startFacebookLogInTextSize" android:gravity="center|right" android:id="@id/gigya_facebook_login" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/FacebookLandingLong" android:layout_centerInParent="true" style="@style/Theme.Roblox.Button.Flat.Blue.Settings" />
        <ImageView android:id="@id/gigya_facebook_icon" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="@dimen/settingsIconHeight" android:layout_marginLeft="@dimen/facebookIconMargin" android:src="@drawable/icon_facebook_white" android:layout_centerVertical="true" />
    </RelativeLayout>
    <com.skyblox.c2016.components.RbxButton android:enabled="true" android:id="@id/login_button" android:layout_width="250.0dip" android:layout_height="@dimen/landingButtonHeight" android:text="@string/LoginButton" style="@style/Theme.Roblox.Button.Flat.White.Settings" />
    <Space android:layout_width="20.0dip" android:layout_height="20.0dip" />
    <com.skyblox.c2016.components.RbxButton android:enabled="true" android:id="@id/signup_button" android:layout_width="250.0dip" android:layout_height="@dimen/landingButtonHeight" android:text="@string/SignupLower" style="@style/Theme.Roblox.Button.Flat.White.Settings" />
    <Space android:layout_width="20.0dip" android:layout_height="20.0dip" />
    <com.skyblox.c2016.components.RbxButton android:enabled="true" android:id="@id/play_now_button" android:layout_width="250.0dip" android:layout_height="@dimen/landingButtonHeight" android:text="@string/PlayNowButtonLabel" style="@style/Theme.Roblox.Button.Flat.White.Settings" />
</LinearLayout>
